--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -535,3 +535,6 @@ background: linear-gradient(to right, #4343438e, #0000008c), /* W3C, IE 10+/ Edg
   color: rgb(229, 170, 61);
   transition: 0.5s;
 }
+.sobre-nosotros{
+  color:#e8f1f2;
+}
