--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -570,3 +570,7 @@ background: linear-gradient(to right, #4343438e, #0000008c), /* W3C, IE 10+/ Edg
 .maps a:hover{
   color:rgb(229, 170, 61);
 }
+
+.blog{
+  color:#e8f1f2;
+}
