--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,32 +57,43 @@ h2 {
 }
 .section_ofimatica{
   padding: 7rem 0;
-  background: rgb(229, 170, 61);
+  background:bisque;
   color: #0d1e2d;
-  font-weight: 600;
+  
 }
+
 .section_ofimatica h2{
   color:#0d1e2d;
 }
-.img_ofimatica{
-  border:2px solid #0d1e2d;
+.section_ofimatica p{
+  font-weight: 500;
 }
+.img_ofimatica{
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  padding-left: 20px;
+  border-left: 10px solid black;
+  
+  
+  margin-bottom: 10px;
+}
+
 .botton_ofimatica {
   margin: 10px 0 0 0;
-  border: 3px solid rgb(229, 170, 61);
+  border: 3px solid burlywood;
   padding: 10px;
   background: #13293d;
   color: #e8f1f2;
 }
 .botton_ofimatica:hover {
-  background: rgb(229, 170, 61);
+  background: bisque;
   border: 3px solid #0d1e2d;
   color: #0d1e2d;
   font-weight: 600;
   transition: 0.8s;
 }
 .clients {
-  background: rgb(229, 170, 61);
+  background:burlywood;
   text-align: justify;
   color: #0d1e2d;
 }
@@ -329,13 +340,13 @@ h2 {
 }
 .services a {
   margin: 10px 0 0 0;
-  border: 3px solid rgb(229, 170, 61);
+  border: 3px solid burlywood;
   padding: 10px;
   background: #13293d;
   color: #e8f1f2;
 }
 .services a:hover {
-  background: rgb(229, 170, 61);
+  background: burlywood;
   border: 3px solid #0d1e2d;
   color: #0d1e2d;
   font-weight: 600;
@@ -345,16 +356,17 @@ h2 {
   margin: 8em 0 0 0 ;
   position: relative;
   
+  
 }
 .botton {
   margin: 10px 0 0 0;
-  border: 3px solid rgb(229, 170, 61);
+  border: 3px solid burlywood;
   padding: 10px;
   background: #13293d;
   color: #e8f1f2;
 }
 .botton:hover {
-  background: rgb(229, 170, 61);
+  background: burlywood;
   border: 3px solid #0d1e2d;
   color: #0d1e2d;
   font-weight: 600;
@@ -362,7 +374,7 @@ h2 {
 }
 .services i {
   font-size: 40px;
-  color: rgb(229, 170, 61);
+  color: burlywood;
 }
 .services h4 {
   padding-top: 10px;
@@ -375,7 +387,7 @@ h2 {
   color: #e8f1f2;
 }
 .services span {
-  color: rgb(229, 170, 61);
+  color: burlywood;
 }
 
 /* Contact Form */
@@ -485,7 +497,7 @@ h2 {
   color: #e8f1f2;
 }
 .custom-navmenu a:hover {
-  color: rgb(229, 170, 61);
+  color: burlywood;
 }
 .custom-navmenu i {
   padding: 0.5rem;
@@ -493,7 +505,7 @@ h2 {
 }
 .custom-navmenu i:hover {
   padding: 0.5rem;
-  color: rgb(229, 170, 61);
+  color: burlywood;
   transition: 0.4s;
 }
 
@@ -620,7 +632,7 @@ h2 {
   transform: translate(-50%, -50%);
 }
 .social a:hover {
-  color: rgb(229, 170, 61);
+  color: burlywood;
   transition: 0.5s;
 }
 .sobre-nosotros {
@@ -635,7 +647,7 @@ h2 {
   color: #e8f1f2;
 }
 .maps a:hover {
-  color: rgb(229, 170, 61);
+  color:burlywood;
 }
 
 
