--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ h2 {
 
 .botton_ofimatica {
   margin: 10px 0 0 0;
-  border: 3px solid burlywood;
+  border: 3px solid #deb887;
   padding: 10px;
   background: #13293d;
   color: #e8f1f2;
